crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_method_void.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { <A> void func() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
LESS "<"
IDENTIFIER "A"
GREATER ">"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..30
  CLASS_DECL@0..30
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..30
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      METHOD_DECL@10..28
        TYPE_PARAMETERS@10..13
          LESS@10..11 "<"
          TYPE_PARAMETER@11..12
            IDENTIFIER@11..12 "A"
          GREATER@12..13 ">"
        WHITESPACE@13..14 " "
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..23 "func"
        FORMAL_PARAMETERS@23..25
          L_PAREN@23..24 "("
          R_PAREN@24..25 ")"
        WHITESPACE@25..26 " "
        BLOCK@26..28
          L_BRACE@26..27 "{"
          R_BRACE@27..28 "}"
      WHITESPACE@28..29 " "
      R_BRACE@29..30 "}"
