crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_multiple.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A<T, U> {}
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..16
  CLASS_DECL@0..16
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    TYPE_PARAMETERS@7..13
      LESS@7..8 "<"
      TYPE_PARAMETER@8..9
        IDENTIFIER@8..9 "T"
      COMMA@9..10 ","
      WHITESPACE@10..11 " "
      TYPE_PARAMETER@11..12
        IDENTIFIER@11..12 "U"
      GREATER@12..13 ">"
    WHITESPACE@13..14 " "
    CLASS_BODY@14..16
      L_BRACE@14..15 "{"
      R_BRACE@15..16 "}"
