crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_with_bound.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A<T extends Number> {}
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "Number"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..28
  CLASS_DECL@0..28
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    TYPE_PARAMETERS@7..25
      LESS@7..8 "<"
      TYPE_PARAMETER@8..24
        IDENTIFIER@8..9 "T"
        WHITESPACE@9..10 " "
        TYPE_BOUND@10..24
          EXTENDS_KW@10..17 "extends"
          WHITESPACE@17..18 " "
          TYPE@18..24
            QUALIFIED_NAME@18..24
              IDENTIFIER@18..24 "Number"
      GREATER@24..25 ">"
    WHITESPACE@25..26 " "
    CLASS_BODY@26..28
      L_BRACE@26..27 "{"
      R_BRACE@27..28 "}"
