crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_with_intersection_bound.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A<T extends B & C> {}
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "B"
WHITESPACE " "
BIT_AND "&"
WHITESPACE " "
IDENTIFIER "C"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..31
  INTERFACE_DECL@0..31
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "A"
    TYPE_PARAMETERS@11..28
      LESS@11..12 "<"
      TYPE_PARAMETER@12..27
        IDENTIFIER@12..13 "T"
        WHITESPACE@13..14 " "
        TYPE_BOUND@14..27
          EXTENDS_KW@14..21 "extends"
          WHITESPACE@21..22 " "
          TYPE@22..23
            QUALIFIED_NAME@22..23
              IDENTIFIER@22..23 "B"
          WHITESPACE@23..24 " "
          BIT_AND@24..25 "&"
          WHITESPACE@25..26 " "
          TYPE@26..27
            QUALIFIED_NAME@26..27
              IDENTIFIER@26..27 "C"
      GREATER@27..28 ">"
    WHITESPACE@28..29 " "
    INTERFACE_BODY@29..31
      L_BRACE@29..30 "{"
      R_BRACE@30..31 "}"
