crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_with_fqn.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    java.util.List<java.lang.String> list;
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "java"
DOT "."
IDENTIFIER "util"
DOT "."
IDENTIFIER "List"
LESS "<"
IDENTIFIER "java"
DOT "."
IDENTIFIER "lang"
DOT "."
IDENTIFIER "String"
GREATER ">"
WHITESPACE " "
IDENTIFIER "list"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..58
  CLASS_DECL@0..57
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..57
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      FIELD_DECL@17..55
        TYPE@17..49
          QUALIFIED_NAME@17..31
            IDENTIFIER@17..21 "java"
            DOT@21..22 "."
            IDENTIFIER@22..26 "util"
            DOT@26..27 "."
            IDENTIFIER@27..31 "List"
          TYPE_ARGUMENTS@31..49
            LESS@31..32 "<"
            TYPE_ARGUMENT@32..48
              TYPE@32..48
                QUALIFIED_NAME@32..48
                  IDENTIFIER@32..36 "java"
                  DOT@36..37 "."
                  IDENTIFIER@37..41 "lang"
                  DOT@41..42 "."
                  IDENTIFIER@42..48 "String"
            GREATER@48..49 ">"
        WHITESPACE@49..50 " "
        VARIABLE_DECLARATOR_LIST@50..54
          VARIABLE_DECLARATOR@50..54
            IDENTIFIER@50..54 "list"
        SEMICOLON@54..55 ";"
      WHITESPACE@55..56 "\n"
      R_BRACE@56..57 "}"
  WHITESPACE@57..58 "\n"
