crates/java-syntax/tests/snapshots/parser_snapshots__parse_var_name_is_contextual_kw.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        record record;
        record record() {};
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "record"
SEMICOLON ";"
WHITESPACE "\n        "
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "record"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..90
  CLASS_DECL@0..89
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..89
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..87
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..87
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@39..53
            LOCAL_VARIABLE_DECLARATION@39..52
              TYPE@39..45
                QUALIFIED_NAME@39..45
                  IDENTIFIER@39..45 "record"
              WHITESPACE@45..46 " "
              VARIABLE_DECLARATOR_LIST@46..52
                VARIABLE_DECLARATOR@46..52
                  IDENTIFIER@46..52 "record"
            SEMICOLON@52..53 ";"
          WHITESPACE@53..62 "\n        "
          RECORD_DECL@62..80
            IDENTIFIER@62..68 "record"
            WHITESPACE@68..69 " "
            IDENTIFIER@69..75 "record"
            FORMAL_PARAMETERS@75..77
              L_PAREN@75..76 "("
              R_PAREN@76..77 ")"
            WHITESPACE@77..78 " "
            RECORD_BODY@78..80
              L_BRACE@78..79 "{"
              R_BRACE@79..80 "}"
          EMPTY_STMT@80..81
            SEMICOLON@80..81 ";"
          WHITESPACE@81..86 "\n    "
          R_BRACE@86..87 "}"
      WHITESPACE@87..88 "\n"
      R_BRACE@88..89 "}"
  WHITESPACE@89..90 "\n"
