crates/java-syntax/tests/snapshots/parser_snapshots__parse_varargs.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    void func(String... args) {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
IDENTIFIER "String"
ELLIPSIS "..."
WHITESPACE " "
IDENTIFIER "args"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..45
  CLASS_DECL@0..44
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..44
      L_BRACE@8..9 "{"
      WHITESPACE@9..14 "\n    "
      METHOD_DECL@14..42
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..23 "func"
        FORMAL_PARAMETERS@23..39
          L_PAREN@23..24 "("
          SPREAD_PARAMETER@24..38
            TYPE@24..30
              QUALIFIED_NAME@24..30
                IDENTIFIER@24..30 "String"
            ELLIPSIS@30..33 "..."
            WHITESPACE@33..34 " "
            IDENTIFIER@34..38 "args"
          R_PAREN@38..39 ")"
        WHITESPACE@39..40 " "
        BLOCK@40..42
          L_BRACE@40..41 "{"
          R_BRACE@41..42 "}"
      WHITESPACE@42..43 "\n"
      R_BRACE@43..44 "}"
  WHITESPACE@44..45 "\n"
