crates/java-syntax/tests/snapshots/parser_snapshots__parse_varargs_with_modifiers.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    void func(@Annotation final String... args) {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
AT "@"
IDENTIFIER "Annotation"
WHITESPACE " "
FINAL_KW "final"
WHITESPACE " "
IDENTIFIER "String"
ELLIPSIS "..."
WHITESPACE " "
IDENTIFIER "args"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..63
  CLASS_DECL@0..62
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..62
      L_BRACE@8..9 "{"
      WHITESPACE@9..14 "\n    "
      METHOD_DECL@14..60
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..23 "func"
        FORMAL_PARAMETERS@23..57
          L_PAREN@23..24 "("
          SPREAD_PARAMETER@24..56
            MODIFIER_LIST@24..41
              MARKER_ANNOTATION@24..35
                AT@24..25 "@"
                QUALIFIED_NAME@25..35
                  IDENTIFIER@25..35 "Annotation"
              WHITESPACE@35..36 " "
              FINAL_KW@36..41 "final"
            WHITESPACE@41..42 " "
            TYPE@42..48
              QUALIFIED_NAME@42..48
                IDENTIFIER@42..48 "String"
            ELLIPSIS@48..51 "..."
            WHITESPACE@51..52 " "
            IDENTIFIER@52..56 "args"
          R_PAREN@56..57 ")"
        WHITESPACE@57..58 " "
        BLOCK@58..60
          L_BRACE@58..59 "{"
          R_BRACE@59..60 "}"
      WHITESPACE@60..61 "\n"
      R_BRACE@61..62 "}"
  WHITESPACE@62..63 "\n"
