crates/java-syntax/tests/snapshots/parser_snapshots__parse_void_method_with_throws_clause.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() throws Exception {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
THROWS_KW "throws"
WHITESPACE " "
IDENTIFIER "Exception"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..51
  CLASS_DECL@0..50
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..50
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..48
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        THROWS_CLAUSE@29..45
          THROWS_KW@29..35 "throws"
          WHITESPACE@35..36 " "
          TYPE@36..45
            QUALIFIED_NAME@36..45
              IDENTIFIER@36..45 "Exception"
        WHITESPACE@45..46 " "
        BLOCK@46..48
          L_BRACE@46..47 "{"
          R_BRACE@47..48 "}"
      WHITESPACE@48..49 "\n"
      R_BRACE@49..50 "}"
  WHITESPACE@50..51 "\n"
