crates/java-syntax/tests/snapshots/parser_snapshots__parse_while_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    void func() {
        while (true) {
            // do something
        }
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
WHILE_KW "while"
WHITESPACE " "
L_PAREN "("
TRUE_LITERAL "true"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n            "
LINE_COMMENT "// do something"
WHITESPACE "\n        "
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..97
  CLASS_DECL@0..96
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..96
      L_BRACE@8..9 "{"
      WHITESPACE@9..14 "\n    "
      METHOD_DECL@14..94
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..23 "func"
        FORMAL_PARAMETERS@23..25
          L_PAREN@23..24 "("
          R_PAREN@24..25 ")"
        WHITESPACE@25..26 " "
        BLOCK@26..94
          L_BRACE@26..27 "{"
          WHITESPACE@27..36 "\n        "
          WHILE_STMT@36..88
            WHILE_KW@36..41 "while"
            WHITESPACE@41..42 " "
            PARENTHESIZED_EXPR@42..48
              L_PAREN@42..43 "("
              LITERAL@43..47
                TRUE_LITERAL@43..47 "true"
              R_PAREN@47..48 ")"
            WHITESPACE@48..49 " "
            BLOCK@49..88
              L_BRACE@49..50 "{"
              WHITESPACE@50..63 "\n            "
              LINE_COMMENT@63..78 "// do something"
              WHITESPACE@78..87 "\n        "
              R_BRACE@87..88 "}"
          WHITESPACE@88..93 "\n    "
          R_BRACE@93..94 "}"
      WHITESPACE@94..95 "\n"
      R_BRACE@95..96 "}"
  WHITESPACE@96..97 "\n"
